fix: homebrew: add nodejs and php to _core/Brewfile

--- a/homebrew/_core/Brewfile
+++ b/homebrew/_core/Brewfile
@@ -30,10 +30,12 @@ brew "luarocks"
 brew "ncurses"
 brew "neovim"
 brew "nodenv"
+brew "nodejs"
 brew "openssl@1.1"
 brew "ox"
 brew "pandoc"
 brew "perl"
+brew "php"
 brew "pyenv"
 brew "pyenv-virtualenv"
 brew "rbenv"
