feat: lazygit: bring back prompt to return from successful subprocess

--- a/.config/lazygit/config.yml
+++ b/.config/lazygit/config.yml
@@ -27,5 +27,5 @@ customCommands:
     context: global
     description: 'Open Lazygit in new tmux window'
     command: '[[ -n $TMUX ]] && tmux new-window -c $(tmux display-message -p "#{pane_current_path}") lazygit && tmux display-popup -C'
-promptToReturnFromSubprocess: false
+#promptToReturnFromSubprocess: false
 
