fix: lazygit: setting delta as pager is slow
Turning off the auto-detection of light vs dark theme fastens the load
time of diffs & logs in Lazygit.

It also gets rid of the "weird" characters ("11;?[c") in the main pane.

https://github.com/dandavison/delta/issues/1664

--- a/.config/lazygit/config.yml
+++ b/.config/lazygit/config.yml
@@ -21,7 +21,7 @@ git:
   mainBranches: ['main', 'master', 'live']
   paging:
     colorArg: always
-    pager: delta --paging=never
+    pager: delta --paging=never --detect-dark-light=never
 customCommands:
   - key: '<c-t>'
     context: global
