fix: tmux: fix percent-based split size

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -56,8 +56,8 @@ bind-key -N "Resize pane 5 lines to the right" -r C-l resize-pane -R 5
 # Splitting
 bind -N "New vertically split" \\ split-window -h -c '#{pane_current_path}'
 bind -N "New horizontal split" - split-window -v -c '#{pane_current_path}'
-bind -N "New 33%-wide vertical split" | split-window -fh -c '#{pane_current_path}' -p 33
-bind -N "New 33%-high horizontal split" _ split-window -fv -c '#{pane_current_path}' -p 33
+bind -N "New 33%-wide vertical split" | split-window -fh -c '#{pane_current_path}' -l 33%
+bind -N "New 33%-high horizontal split" _ split-window -fv -c '#{pane_current_path}' -l 33%
 
 set-option -g -q mouse on
 bind-key -T root WheelUpPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; copy-mode -e; send-keys -M"
