--- a/.stow-local-ignore
+++ b/.stow-local-ignore
@@ -7,6 +7,7 @@
 ^/Makefile
 ^/preview.png
 ^/README.md
+^/*.md
 ^/applescripts
 ^/base16-fzf
 ^/base16-shell
@@ -26,3 +27,5 @@
 ^/zsh
 ^/terminfo
 ^/ssh
+^/logos
+^/ascii
