feat: tmux: enable focus-events

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -145,6 +145,8 @@ set -g clock-mode-colour color10
 set -g status-left-length 100
 set -g status-right-length 100
 
+set-option focus-events on
+
 set -g @plugin 'tmux-plugins/tmux-sessionist'
 set -g @plugin 'sainnhe/tmux-fzf'
 set -g @plugin 'tinted-theming/base16-tmux'
