feat: bat: add syntax mapping for k8s config

--- a/.config/bat/config
+++ b/.config/bat/config
@@ -25,3 +25,4 @@
 #--map-syntax ".ignore:Git Ignore"
 --map-syntax="*.neon:YAML"
 --map-syntax="composer.lock:JSON"
+--map-syntax="**/.kube/config:YAML"
