chore: brew: install jqp & sort

--- a/homebrew/_core/Brewfile
+++ b/homebrew/_core/Brewfile
@@ -23,16 +23,17 @@ brew "grep"
 brew "htop"
 brew "httpie"
 brew "hunspell"
+brew "hyfetch"
 brew "imagemagick"
-brew "jstkdng/programs/ueberzugpp"
 brew "jq"
+brew "jstkdng/programs/ueberzugpp"
 brew "lazygit"
 brew "luarocks"
 brew "ncurses"
 brew "neovim"
-brew "hyfetch"
-brew "nodenv"
+brew "noahgorstein/tap/jqp"
 brew "nodejs"
+brew "nodenv"
 brew "openssl@1.1"
 brew "ox"
 brew "pandoc"
