feat: java: use openjdk from Homebrew

--- a/homebrew/ithildin/Brewfile
+++ b/homebrew/ithildin/Brewfile
@@ -81,6 +81,7 @@ brew "xh"
 brew "yazi"
 brew "yt-dlp"
 brew "zoxide"
+brew "openjdk"
 brew "mikescher/tap/dops"
 brew "noahgorstein/tap/jqp"
 brew "sass/sass/sass"
