feat: homebrew: add `jless`

--- a/homebrew/_core/Brewfile
+++ b/homebrew/_core/Brewfile
@@ -25,6 +25,7 @@ brew "httpie"
 brew "hunspell"
 brew "hyfetch"
 brew "imagemagick"
+brew "jless"
 brew "jq"
 brew "jstkdng/programs/ueberzugpp"
 brew "lazygit"
