--- a/dot-config/ghostty/config
+++ b/dot-config/ghostty/config
@@ -13,43 +13,10 @@ cursor-style = "block"
 window-padding-x = 4
 window-padding-y = 4
 
-# Color theme
-palette = 0=#1d2021
-palette = 1=#fb4934
-palette = 2=#b8bb26
-palette = 3=#fabd2f
-palette = 4=#83a598
-palette = 5=#d3869b
-palette = 6=#8ec07c
-palette = 7=#d5c4a1
-palette = 8=#504945
-palette = 9=#fb4934
-palette = 10=#b8bb26
-palette = 11=#fabd2f
-palette = 12=#83a598
-palette = 13=#d3869b
-palette = 14=#8ec07c
-palette = 15=#fbf1c7
-palette = 16=#fe8019
-palette = 17=#d65d0e
-palette = 18=#3c3836
-palette = 19=#504945
-palette = 20=#bdae93
-palette = 21=#ebdbb2
-
-# Foreground & background colors
-background = #1d2021
-foreground = #d5c4a1
-cursor-color = #d5c4a1
-selection-background = #504945
-selection-foreground = #d5c4a1
-
 # macOS specific configuration:
 macos-option-as-alt = true
 macos-auto-secure-input = true
 macos-secure-input-indication = true
-macos-icon-ghost-color = #d5c4a1
-macos-icon-screen-color = #1d2021
 
 macos-icon = custom-style
 macos-icon-frame = beige
@@ -69,4 +36,6 @@ keybind = cmd+left_bracket=previous_tab
 keybind = cmd+right_bracket=next_tab
 keybind = cmd+comma=last_tab
 
+# Drop the trailing dot once tinty 0.25.x is released
+theme = "/Users/bez/.local/share/tinted-theming/tinty/tinted-terminal-themes-ghostty-file."
 
