fix: tinted-theming: ghostty: load generated theme properly

--- a/dot-config/ghostty/config
+++ b/dot-config/ghostty/config
@@ -37,5 +37,5 @@ keybind = cmd+right_bracket=next_tab
 keybind = cmd+comma=last_tab
 
 # Drop the trailing dot once tinty 0.25.x is released
-theme = "/Users/bez/.local/share/tinted-theming/tinty/tinted-terminal-themes-ghostty-file."
+theme = "tinted-theming"
 
