chore: homebrew: add tinted-theming/* as core dependencies

--- a/homebrew/_core/Brewfile
+++ b/homebrew/_core/Brewfile
@@ -51,7 +51,8 @@ brew "rust"
 brew "sd"
 brew "stow"
 brew "telnet"
-brew "tinty"
+brew "tinted-theming/tinted/tinty"
+brew "tinted-theming/tinted/tinted-builder-rust"
 brew "tmux"
 brew "tree"
 brew "watch"
