fix: tmux: make tabs more legible in certain themes e.g. tokyodark

--- a/dot-config/tmux/tmux.conf
+++ b/dot-config/tmux/tmux.conf
@@ -84,7 +84,7 @@ set -F status "#{?#{>:#{session_windows},1},2,on}"
 
 #More advanced styles
 setw -g window-status-format \
-  "#[bg=color19,fg=color00,bold] #{window_index} #[default]#[fg=color19,bold,bg=color18] #{window_name} #[default]"
+  "#[bg=color19,fg=color03,bold] #{window_index} #[default]#[fg=color11,bg=color18] #{window_name} #[default]"
 
 setw -g window-status-current-format \
 '#[default]#[bg=color11,bold,fg=color19]#{?pane_synchronized, ↔,} #{window_index} #[default]'\
