feat: homebrew: install moreutils

--- a/homebrew/_core/Brewfile
+++ b/homebrew/_core/Brewfile
@@ -32,6 +32,7 @@ brew "jq"
 brew "jstkdng/programs/ueberzugpp"
 brew "lazygit"
 brew "luarocks"
+brew "moreutils"
 brew "ncurses"
 brew "neovim"
 brew "noahgorstein/tap/jqp"
