--- a/.gitmodules
+++ b/.gitmodules
@@ -25,4 +25,4 @@
 [submodule "tinted-nvim"]
 	path = dot-config/nvim/lua/dev/tinted-nvim
 	url = git@github.com:tinted-theming/tinted-nvim
-    branch = bezhermoso/refactor
+    branch = bezalel/fix-live-reload
