--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,6 @@ dot-config/ghostty/themes/base16*
 dot-config/ghostty/themes/base24*
 dot-config/ghostty/themes/tinted-theming
 dot-config/bat/themes/*
+
+# Ignore the colors table created by tinty-terminal for Alacritty
+dot-config/alacritty/colors.toml
