--- a/dot-config/alacritty/alacritty.toml
+++ b/dot-config/alacritty/alacritty.toml
@@ -1,6 +1,5 @@
-live_config_reload = true
 
-[shell]
+[terminal.shell]
 program = "/bin/zsh"
 args = ["-l"]
 
@@ -14,10 +13,15 @@ decorations = "None"
 history = 100000
 
 [font]
-normal = { family = "SquareSansM Nerd Font" }
-bold = { family = "SquareSansM Nerd Font" }
-italic = { family = "SquareSansM Nerd Font" }
-bold_italic = { family = "SquareSansM Nerd Font" }
+normal = { family = "BerkeleyMono Nerd Font Mono" }
+bold = { family = "BerkeleyMono Nerd Font Mono" }
+italic = { family = "BerkeleyMono Nerd Font Mono" }
+bold_italic = { family = "BerkeleyMono Nerd Font Mono" }
 size = 13
 offset = { x = 0, y = 5 }
 
+[general]
+live_config_reload = true
+import = ["~/.config/alacritty/colors.toml"]
+
+[terminal]
