feat: install mergiraf

--- a/homebrew/_core/Brewfile
+++ b/homebrew/_core/Brewfile
@@ -33,6 +33,7 @@ brew "jstkdng/programs/ueberzugpp"
 brew "lazygit"
 brew "luarocks"
 brew "moreutils"
+brew "mergiraf"
 brew "ncurses"
 brew "neovim"
 brew "noahgorstein/tap/jqp"
