feat: tmux: custom picker

--- a/dot-config/tmux/tmux.conf
+++ b/dot-config/tmux/tmux.conf
@@ -6,7 +6,6 @@ set-option -g default-terminal "tmux-256color"
 set-option -g escape-time 1
 unbind C-b
 set -g prefix C-s
-set -g prefix2 C-s
 # if-shell '[ -z "$SSH_TTY" ] && [ -z "$SSH_CLIENT" ] && [ -z "$SSH_CONNECTION" ]' 'unbind C-b; set -g prefix C-Space; set -g prefix2 C-s' ''
 set-option -g allow-rename off
 set-option -g history-limit 50000
@@ -35,6 +34,7 @@ bind-key -N "Cycle through panes" -r s select-pane -t :.+
 
 bind-key -N "Create new window" n new-window -c '#{pane_current_path}'
 
+bind-key -N "Session picker" C-s run-shell "~/.config/tmux/picker.zsh"
 # Navigation
 bind -N "Select pane below" j select-pane -D
 bind -N "Select pane above" k select-pane -U
