refactor: tmux: use tmux popups for session picker

--- a/dot-config/tmux/tmux.conf
+++ b/dot-config/tmux/tmux.conf
@@ -188,6 +188,10 @@ bind-key -N "Popup: Edit & reload tmux configuration" E popup \
   -T '#[bold,align=centre][ TMUX configuration ]#[default]' \
   'zsh -l -c "nvim ~/.config/tmux/tmux.conf && tmux source-file ~/.config/tmux/tmux.conf && tmux display-message Reloaded"'
 
+bind-key -N "Popup: Session picker" C-s popup \
+  -w 50% -b rounded -S 'fg=color11' -E -d '#{pane_current_path}' \
+  '~/.config/tmux/picker.zsh'
+
 # List keys including those without notes
 bind-key ? list-keys -Na
 
