feat: tmux: custom picker: adaptive borders

--- a/dot-config/tmux/tmux.conf
+++ b/dot-config/tmux/tmux.conf
@@ -190,7 +190,8 @@ bind-key -N "Popup: Edit & reload tmux configuration" E popup \
 
 bind-key -N "Popup: Session picker" C-s popup \
   -w 50% -b rounded -S 'fg=color11' -E -d '#{pane_current_path}' \
-  '~/.config/tmux/picker.zsh'
+  -T "#[bold,align=left][ Session picker ]#[default]" \
+  '~/.config/tmux/picker.zsh --border=none'
 
 # List keys including those without notes
 bind-key ? list-keys -Na
