chore: brew: install claude-code + sort

--- a/homebrew/_core/Brewfile
+++ b/homebrew/_core/Brewfile
@@ -8,12 +8,15 @@ brew "atuin"
 brew "bat"
 brew "boxes"
 brew "btop"
+brew "charmbracelet/tap/crush"
+brew "claude-code"
 brew "curl"
 brew "duf"
 brew "dust"
 brew "fd"
 brew "fortune"
 brew "freetds"
+brew "fx"
 brew "fzf"
 brew "gh"
 brew "git"
@@ -22,6 +25,7 @@ brew "git-extras"
 brew "gnu-sed"
 brew "gnupg"
 brew "grep"
+brew "gum"
 brew "htop"
 brew "httpie"
 brew "hunspell"
@@ -32,8 +36,8 @@ brew "jq"
 brew "jstkdng/programs/ueberzugpp"
 brew "lazygit"
 brew "luarocks"
-brew "moreutils"
 brew "mergiraf"
+brew "moreutils"
 brew "ncurses"
 brew "neovim"
 brew "noahgorstein/tap/jqp"
@@ -53,10 +57,11 @@ brew "rust"
 brew "sd"
 brew "stow"
 brew "telnet"
-brew "tinted-theming/tinted/tinty"
 brew "tinted-theming/tinted/tinted-builder-rust"
+brew "tinted-theming/tinted/tinty"
 brew "tmux"
 brew "tree"
+brew "uv"
 brew "watch"
 brew "watchexec"
 brew "wget"
@@ -66,12 +71,6 @@ brew "yazi"
 brew "yt-dlp"
 brew "zoxide"
 brew "zsh"
-brew "fx"
-brew "uv"
-brew "gum"
-brew "charmbracelet/tap/crush"
 cask "1password-cli"
 cask "bettertouchtool"
 cask "font-monaspace-nerd-font"
-
-
