feat: brew: install tree-sitter & tree-sitter-cli

--- a/homebrew/_core/Brewfile
+++ b/homebrew/_core/Brewfile
@@ -61,6 +61,8 @@ brew "tinted-theming/tinted/tinted-builder-rust"
 brew "tinted-theming/tinted/tinty"
 brew "tmux"
 brew "tree"
+brew "tree-sitter"
+brew "tree-sitter-cli"
 brew "uv"
 brew "watch"
 brew "watchexec"
