chore: brew: replace hyfetch with fastfetch

--- a/homebrew/_core/Brewfile
+++ b/homebrew/_core/Brewfile
@@ -15,6 +15,7 @@ brew "duf"
 brew "dust"
 brew "fd"
 brew "fortune"
+brew "fastfetch"
 brew "freetds"
 brew "fx"
 brew "fzf"
@@ -29,7 +30,6 @@ brew "gum"
 brew "htop"
 brew "httpie"
 brew "hunspell"
-brew "hyfetch"
 brew "imagemagick"
 brew "jless"
 brew "jq"
