chore: homebrew: change to single quote to appease LSP

--- a/homebrew/_core/Brewfile
+++ b/homebrew/_core/Brewfile
@@ -1,78 +1,78 @@
-tap "homebrew/cask-fonts"
-tap "tinted-theming/tinted"
-cask "font-jetbrains-mono"
-cask "font-jetbrains-mono-nerd-font"
-cask "nikitabobko/tap/aerospace"
+tap 'homebrew/cask-fonts'
+tap 'tinted-theming/tinted'
+cask 'font-jetbrains-mono'
+cask 'font-jetbrains-mono-nerd-font'
+cask 'nikitabobko/tap/aerospace'
 
-brew "atuin"
-brew "bat"
-brew "boxes"
-brew "btop"
-brew "charmbracelet/tap/crush"
-brew "claude-code"
-brew "curl"
-brew "duf"
-brew "dust"
-brew "fd"
-brew "fortune"
-brew "fastfetch"
-brew "freetds"
-brew "fx"
-brew "fzf"
-brew "gh"
-brew "git"
-brew "git-delta"
-brew "git-extras"
-brew "gnu-sed"
-brew "gnupg"
-brew "grep"
-brew "gum"
-brew "htop"
-brew "httpie"
-brew "hunspell"
-brew "imagemagick"
-brew "jless"
-brew "jq"
-brew "jstkdng/programs/ueberzugpp"
-brew "lazygit"
-brew "luarocks"
-brew "mergiraf"
-brew "moreutils"
-brew "ncurses"
-brew "neovim"
-brew "noahgorstein/tap/jqp"
-brew "nodejs"
-brew "nodenv"
-brew "openssl@1.1"
-brew "ox"
-brew "pandoc"
-brew "perl"
-brew "php"
-brew "pyenv"
-brew "pyenv-virtualenv"
-brew "rbenv"
-brew "readline"
-brew "ripgrep"
-brew "rust"
-brew "sd"
-brew "stow"
-brew "telnet"
-brew "tinted-theming/tinted/tinted-builder-rust"
-brew "tinted-theming/tinted/tinty"
-brew "tmux"
-brew "tree"
-brew "tree-sitter"
-brew "tree-sitter-cli"
-brew "uv"
-brew "watch"
-brew "watchexec"
-brew "wget"
-brew "wget2"
-brew "xh"
-brew "yazi"
-brew "yt-dlp"
-brew "zoxide"
-brew "zsh"
-cask "1password-cli"
-cask "bettertouchtool"
-cask "font-monaspace-nerd-font"
+brew 'atuin'
+brew 'bat'
+brew 'boxes'
+brew 'btop'
+brew 'charmbracelet/tap/crush'
+brew 'claude-code'
+brew 'curl'
+brew 'duf'
+brew 'dust'
+brew 'fd'
+brew 'fortune'
+brew 'fastfetch'
+brew 'freetds'
+brew 'fx'
+brew 'fzf'
+brew 'gh'
+brew 'git'
+brew 'git-delta'
+brew 'git-extras'
+brew 'gnu-sed'
+brew 'gnupg'
+brew 'grep'
+brew 'gum'
+brew 'htop'
+brew 'httpie'
+brew 'hunspell'
+brew 'imagemagick'
+brew 'jless'
+brew 'jq'
+brew 'jstkdng/programs/ueberzugpp'
+brew 'lazygit'
+brew 'luarocks'
+brew 'mergiraf'
+brew 'moreutils'
+brew 'ncurses'
+brew 'neovim'
+brew 'noahgorstein/tap/jqp'
+brew 'nodejs'
+brew 'nodenv'
+brew 'openssl@1.1'
+brew 'ox'
+brew 'pandoc'
+brew 'perl'
+brew 'php'
+brew 'pyenv'
+brew 'pyenv-virtualenv'
+brew 'rbenv'
+brew 'readline'
+brew 'ripgrep'
+brew 'rust'
+brew 'sd'
+brew 'stow'
+brew 'telnet'
+brew 'tinted-theming/tinted/tinted-builder-rust'
+brew 'tinted-theming/tinted/tinty'
+brew 'tmux'
+brew 'tree'
+brew 'tree-sitter'
+brew 'tree-sitter-cli'
+brew 'uv'
+brew 'watch'
+brew 'watchexec'
+brew 'wget'
+brew 'wget2'
+brew 'xh'
+brew 'yazi'
+brew 'yt-dlp'
+brew 'zoxide'
+brew 'zsh'
+cask '1password-cli'
+cask 'bettertouchtool'
+cask 'font-monaspace-nerd-font'
