feat: homebrew: install ast-grep

--- a/homebrew/_core/Brewfile
+++ b/homebrew/_core/Brewfile
@@ -4,6 +4,7 @@ cask 'font-jetbrains-mono'
 cask 'font-jetbrains-mono-nerd-font'
 cask 'nikitabobko/tap/aerospace'
 
+brew 'ast-grep'
 brew 'atuin'
 brew 'bat'
 brew 'boxes'
@@ -73,6 +74,7 @@ brew 'yazi'
 brew 'yt-dlp'
 brew 'zoxide'
 brew 'zsh'
+
 cask '1password-cli'
 cask 'bettertouchtool'
 cask 'font-monaspace-nerd-font'
