chore: homebrew: organize core Brewfile

--- a/homebrew/_core/Brewfile
+++ b/homebrew/_core/Brewfile
@@ -1,5 +1,8 @@
-tap 'homebrew/cask-fonts'
+tap 'charmbracelet/tap'
 tap 'tinted-theming/tinted'
+tap 'jstkdng/programs'
+tap 'nikitabobko/tap'
+
 cask 'font-jetbrains-mono'
 cask 'font-jetbrains-mono-nerd-font'
 cask 'nikitabobko/tap/aerospace'
@@ -10,7 +13,6 @@ brew 'bat'
 brew 'boxes'
 brew 'btop'
 brew 'charmbracelet/tap/crush'
-brew 'claude-code'
 brew 'curl'
 brew 'duf'
 brew 'dust'
