style: homebrew: single quote to appease LSP

--- a/homebrew/ithildin/Brewfile
+++ b/homebrew/ithildin/Brewfile
@@ -1,142 +1,142 @@
-tap "dart-lang/dart"
-tap "homebrew/bundle"
-tap "homebrew/cask"
-tap "homebrew/cask-fonts"
-tap "homebrew/core"
-tap "mikescher/tap"
-tap "noahgorstein/tap"
-tap "sass/sass"
-tap "shivammathur/php"
-brew "atuin"
-brew "readline"
-brew "awscli"
-brew "b2-tools"
-brew "bat"
-brew "bat-extras"
-brew "btop"
-brew "caddy"
-brew "openldap"
-brew "curl"
-brew "freetds"
-brew "krb5"
-brew "libpq"
-brew "libzip"
-brew "php"
-brew "composer"
-brew "diff-so-fancy"
-brew "direnv"
-brew "dog"
-brew "duf"
-brew "dust"
-brew "fd"
-brew "gnutls"
-brew "leptonica"
-brew "tesseract"
-brew "ffmpeg"
-brew "fortune"
-brew "fzf"
-brew "gh"
-brew "git"
-brew "git-delta"
-brew "git-extras"
-brew "gitui"
-brew "gnupg"
-brew "go"
-brew "gpgme"
-brew "grep"
-brew "helm"
-brew "ncurses"
-brew "htop"
-brew "httpie"
-brew "hunspell"
-brew "jq"
-brew "lazygit"
-brew "libffi"
-brew "lnav"
-brew "ncdu"
-brew "neofetch"
-brew "neovim"
-brew "node-build"
-brew "nodenv"
-brew "openssl@1.1"
-brew "pandoc"
-brew "perl"
-brew "pyenv"
-brew "pyenv-virtualenv"
-brew "ranger"
-brew "rbenv"
-brew "ripgrep"
-brew "sd"
-brew "stow"
-brew "telnet"
-brew "tig"
-brew "tmux"
-brew "tree"
-brew "universal-ctags"
-brew "watch"
-brew "watchexec"
-brew "wget"
-brew "wget2"
-brew "xh"
-brew "yazi"
-brew "yt-dlp"
-brew "zoxide"
-brew "openjdk"
-brew "mikescher/tap/dops"
-brew "noahgorstein/tap/jqp"
-brew "sass/sass/sass"
-brew "shivammathur/php/php@7.3"
-brew "shivammathur/php/php@7.4"
-cask "1password-cli"
-cask "airbuddy"
-cask "appcleaner"
-cask "arc"
-cask "backblaze"
-cask "bartender"
-cask "betterdisplay"
-cask "cheatsheet"
-cask "daisydisk"
-cask "dash"
-cask "diffusionbee"
-cask "discord"
-cask "docker"
-cask "fantastical"
-cask "font-jetbrains-mono"
-cask "font-jetbrains-mono-nerd-font"
-cask "font-monaspace-nerd-font"
-cask "google-chrome"
-cask "google-cloud-sdk"
-cask "google-drive"
-cask "hazel"
-cask "hovrly"
-cask "iina"
-cask "imageoptim"
-cask "istat-menus"
-cask "iterm2"
-cask "jellyfin"
-cask "jetbrains-toolbox"
-cask "latest"
-cask "launchcontrol"
-cask "logi-options-plus"
-cask "macupdater"
-cask "marked"
-cask "mimestream"
-cask "notion"
-cask "obsidian"
-cask "orbstack"
-cask "pdf-expert"
-cask "pocket-casts"
-cask "quiet-reader"
-cask "raycast"
-cask "rectangle-pro"
-cask "rocket-typist"
-cask "screens"
-cask "shottr"
-cask "slack"
-cask "soundsource"
-cask "spotify"
-cask "tailscale"
-cask "tempbox"
-cask "textual"
-cask "transmit"
-cask "via"
+tap 'dart-lang/dart'
+tap 'homebrew/bundle'
+tap 'homebrew/cask'
+tap 'homebrew/cask-fonts'
+tap 'homebrew/core'
+tap 'mikescher/tap'
+tap 'noahgorstein/tap'
+tap 'sass/sass'
+tap 'shivammathur/php'
+
+brew 'readline'
+brew 'awscli'
+brew 'b2-tools'
+brew 'bat'
+brew 'bat-extras'
+brew 'btop'
+brew 'caddy'
+brew 'openldap'
+brew 'curl'
+brew 'freetds'
+brew 'krb5'
+brew 'libpq'
+brew 'libzip'
+brew 'php'
+brew 'composer'
+brew 'diff-so-fancy'
+brew 'direnv'
+brew 'dog'
+brew 'duf'
+brew 'dust'
+brew 'fd'
+brew 'gnutls'
+brew 'leptonica'
+brew 'tesseract'
+brew 'ffmpeg'
+brew 'fortune'
+brew 'fzf'
+brew 'gh'
+brew 'git'
+brew 'git-delta'
+brew 'git-extras'
+brew 'gitui'
+brew 'gnupg'
+brew 'go'
+brew 'gpgme'
+brew 'grep'
+brew 'helm'
+brew 'ncurses'
+brew 'htop'
+brew 'httpie'
+brew 'hunspell'
+brew 'jq'
+brew 'lazygit'
+brew 'libffi'
+brew 'lnav'
+brew 'ncdu'
+brew 'neofetch'
+brew 'neovim'
+brew 'node-build'
+brew 'nodenv'
+brew 'openssl@1.1'
+brew 'pandoc'
+brew 'perl'
+brew 'pyenv'
+brew 'pyenv-virtualenv'
+brew 'ranger'
+brew 'rbenv'
+brew 'ripgrep'
+brew 'sd'
+brew 'stow'
+brew 'telnet'
+brew 'tig'
+brew 'tmux'
+brew 'tree'
+brew 'universal-ctags'
+brew 'watch'
+brew 'watchexec'
+brew 'wget'
+brew 'wget2'
+brew 'xh'
+brew 'yazi'
+brew 'yt-dlp'
+brew 'zoxide'
+brew 'openjdk'
+brew 'mikescher/tap/dops'
+brew 'noahgorstein/tap/jqp'
+brew 'sass/sass/sass'
+brew 'shivammathur/php/php@7.3'
+brew 'shivammathur/php/php@7.4'
+cask '1password-cli'
+cask 'airbuddy'
+cask 'appcleaner'
+cask 'arc'
+cask 'backblaze'
+cask 'bartender'
+cask 'betterdisplay'
+cask 'cheatsheet'
+cask 'daisydisk'
+cask 'dash'
+cask 'diffusionbee'
+cask 'discord'
+cask 'docker'
+cask 'fantastical'
+cask 'font-jetbrains-mono'
+cask 'font-jetbrains-mono-nerd-font'
+cask 'font-monaspace-nerd-font'
+cask 'google-chrome'
+cask 'google-cloud-sdk'
+cask 'google-drive'
+cask 'hazel'
+cask 'hovrly'
+cask 'iina'
+cask 'imageoptim'
+cask 'istat-menus'
+cask 'iterm2'
+cask 'jellyfin'
+cask 'jetbrains-toolbox'
+cask 'latest'
+cask 'launchcontrol'
+cask 'logi-options-plus'
+cask 'macupdater'
+cask 'marked'
+cask 'mimestream'
+cask 'notion'
+cask 'obsidian'
+cask 'orbstack'
+cask 'pdf-expert'
+cask 'pocket-casts'
+cask 'quiet-reader'
+cask 'raycast'
+cask 'rectangle-pro'
+cask 'rocket-typist'
+cask 'screens'
+cask 'shottr'
+cask 'slack'
+cask 'soundsource'
+cask 'spotify'
+cask 'tailscale'
+cask 'tempbox'
+cask 'textual'
+cask 'transmit'
+cask 'via'
