feat: tmux: btop popup

--- a/dot-config/tmux/tmux.conf
+++ b/dot-config/tmux/tmux.conf
@@ -193,6 +193,13 @@ bind-key -N "Popup: Session picker" C-s popup \
   -T "#[bold,align=left][ Session picker ]#[default]" \
   '~/.config/tmux/picker.zsh --border=none'
 
+unbind-key B
+bind-key -N "Popup: btop" B popup \
+  -h 80% -w 80% -b rounded -S 'fg=color11' -E -d '#{pane_current_path}' \
+  -T '#[bold,align=centre][ btop ]#[default]' \
+  "btop"
+
+
 # List keys including those without notes
 bind-key ? list-keys -Na
 
